fix signup button hidden on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,6 @@
 	body {
 		background-color: var(--very-dark);
 		min-height: 100vh;
-		overflow-y: hidden;
 		font-family: "Open Sans", sans-serif;
 	}
 
